--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
@@ -14,12 +14,20 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Katzen"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ui.viajes.ViajesDetalleActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ui.viajes.ViajesDetalle"
+            android:exported="false"
+            android:label="@string/title_activity_viajes_detalle"
+            android:theme="@style/Theme.Katzen" />
         <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Katzen.NoActionBar">
+            android:theme="@style/Theme.Katzen.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
