--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,8 +2,8 @@ plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
     id("com.google.gms.google-services")
+    id 'com.google.firebase.crashlytics'
 }
-
 android {
     namespace 'com.example.katzen'
     compileSdk 33
@@ -54,6 +54,7 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
 
     implementation(platform("com.google.firebase:firebase-bom:32.3.1"))
+    implementation 'com.google.firebase:firebase-crashlytics-ktx'
     implementation("com.google.firebase:firebase-analytics-ktx")
 
     implementation 'com.google.android.material:material:1.5.0'
