--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.11.0'
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.work:work-runtime:2.9.0'
+    implementation 'com.afollestad.material-dialogs:core:3.3.0'
+    implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
+
 }
