--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,9 +61,13 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging-ktx'
 
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.google.android.material:material:1.4.0'
+
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.work:work-runtime:2.9.0'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
 
+
+    implementation("com.airbnb.android:lottie:4.1.0")
 }
