--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,4 +70,6 @@ dependencies {
 
 
     implementation("com.airbnb.android:lottie:4.1.0")
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
 }
