--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,11 +43,10 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
     implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.8.4' // Añadido para lifecycleScope
     implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
     implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
     implementation 'com.google.firebase:firebase-database-ktx:21.0.0'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
     implementation 'com.google.firebase:firebase-firestore-ktx:25.0.0'
     implementation 'com.google.firebase:firebase-storage-ktx:21.0.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
@@ -58,19 +57,16 @@ dependencies {
 
     implementation(platform("com.google.firebase:firebase-bom:33.1.2"))
     implementation 'com.google.firebase:firebase-crashlytics-ktx'
-    implementation("com.google.firebase:firebase-analytics-ktx")
+    implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-messaging-ktx'
-
-    implementation 'com.google.android.material:material:1.12.0'
-    implementation 'com.google.android.material:material:1.12.0'
 
     implementation 'com.google.code.gson:gson:2.10.1'
     implementation 'androidx.work:work-runtime:2.9.0'
     implementation 'com.afollestad.material-dialogs:core:3.3.0'
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
 
-    implementation("com.airbnb.android:lottie:4.1.0")
+    implementation 'com.airbnb.android:lottie:4.1.0'
     implementation 'com.github.bumptech.glide:glide:4.15.1'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.15.1'
-
 }
+
