--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,15 +5,15 @@ plugins {
     id 'com.google.firebase.crashlytics'
 }
 android {
-    namespace 'com.example.katzen'
+    namespace "com.ninodev.katzen"
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.katzen"
+        applicationId "com.ninodev.katzen"
         minSdk 24
         targetSdk 34
-        versionCode 19
-        versionName "1.19"
+        versionCode 20
+        versionName "1.20"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
