--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,19 +12,19 @@ android {
         applicationId "com.ninodev.katzen"
         minSdk 24
         targetSdk 34
-        versionCode 35
-        versionName "1.35"
+        versionCode 36
+        versionName "1.36"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
         release {
-            minifyEnabled true
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            minifyEnabled true // También aplicar ProGuard en debug
+            minifyEnabled false // También aplicar ProGuard en debug
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
