cosas extras para productos

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'kotlin-parcelize'
     id("com.google.gms.google-services")
     id 'com.google.firebase.crashlytics'
 }
@@ -12,8 +13,8 @@ android {
         applicationId "com.ninodev.katzen"
         minSdk 24
         targetSdk 34
-        versionCode 36
-        versionName "1.36"
+        versionCode 37
+        versionName "1.37"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
