Se corrigió la encryptacion para tienda

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,11 +21,11 @@ android {
 
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
         debug {
-            minifyEnabled false // También aplicar ProGuard en debug
+            minifyEnabled true // También aplicar ProGuard en debug
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
